<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/text1"
            android:textAlignment="center"
            android:layout_marginVertical="@dimen/_8sdp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btn1"
            android:layout_width="@dimen/_130sdp"
            android:text="Get All Users"
            android:textAllCaps="false"
            android:layout_weight="0"
            android:layout_marginVertical="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:paddingHorizontal="@dimen/_16ssp"
            android:textStyle="bold"
            android:elevation="@dimen/_4sdp"
            android:background="@drawable/button_backgrnd"
            android:layout_height="wrap_content"/>

      


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:layout_height="wrap_content">
        

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/singleUser"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginVertical="@dimen/_8sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_height="match_parent"/>
        
        <Button
            android:id="@+id/btn2"
            android:layout_width="@dimen/_130sdp"
            android:text="Get Single User"
            android:textAllCaps="false"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_weight="0"
            android:textSize="@dimen/_12ssp"
            android:paddingHorizontal="@dimen/_16ssp"
            android:textStyle="bold"
            android:elevation="@dimen/_4sdp"
            android:background="@drawable/button_backgrnd"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/registerUser"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_8sdp"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="@dimen/_130sdp"
            android:text="Register User"
            android:textAllCaps="false"
            android:layout_weight="0"
            android:textSize="@dimen/_12ssp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_16ssp"
            android:textStyle="bold"
            android:elevation="@dimen/_4sdp"
            android:background="@drawable/button_backgrnd"
            android:layout_height="wrap_content"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:layout_height="wrap_content">



        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/updateUser"
            android:textAlignment="center"
            android:layout_marginVertical="@dimen/_8sdp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="@dimen/_130sdp"
            android:text="Update User"
            android:textAllCaps="false"
            android:layout_weight="0"
            android:layout_marginVertical="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:paddingHorizontal="@dimen/_16ssp"
            android:textStyle="bold"
            android:elevation="@dimen/_4sdp"
            android:background="@drawable/button_backgrnd"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/updateUserpatch"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:layout_height="match_parent"/>
        
        <Button
            android:id="@+id/btn5"
            android:layout_width="@dimen/_130sdp"
            android:text="Update User"
            android:layout_marginVertical="@dimen/_8sdp"
            android:textAllCaps="false"
            android:layout_weight="0"
            android:textSize="@dimen/_12ssp"
            android:paddingHorizontal="@dimen/_16ssp"
            android:textStyle="bold"
            android:elevation="@dimen/_4sdp"
            android:background="@drawable/button_backgrnd"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
    

</LinearLayout>